vlib/v/checker/tests/assign_array_init_to_fixed_array_var.vv
mut a := [1, 2, 10]!
a = [1, 2, 3]
dump(a)
